--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,60 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: skyblue;
+}
+
+nav {
+  display: flex;      
+  justify-content: center; 
+  align-items: center;
+  position: sticky;   
+  z-index: 99;
+  top:0;
+  color:white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+  text-align: center;
+  background-color: rgb(16, 16, 56);
+  padding:3px;
+}
+
+
+img {
+  height:300px;
+  width:200px;
+  text-align: center;
+  border: solid black 2px;
+}
+
+div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin:1rem;
+}
+
+@media(min-width:900px){
+  main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap:wrap;
+  }
+}
+
+h1{
+  text-align: center;
+  background-color: rgb(16, 16, 56);
+}
+
+button{
+  background-color: black;
+  color:white;
+}
+
+h2{
+  color:white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
 }
